--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,9 +1,8 @@
 .header {
-  height: 100px;
-  width: 100%;
   background-color: $color-midtone-dark;
+  padding: 10px;
 }
 
 .logo {
-  width: 30%;
+  width: 100%;
 }
