--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,25 @@
 .header {
-  height: 100px;
-  width: 100%;
+  display: grid;
+  grid-template-columns: 200px auto 30px;
+}
+
+.hamburguer {
+  grid-column: 3/4;
+}
+
+.header {
   background-color: #444;
+  padding: 10px;
 }
 
 .logo {
-  width: 30%;
+  width: 100%;
+}
+
+.hamburguer {
+  color: white;
+  font-size: 3em;
+  text-align: right;
 }
 
 /*# sourceMappingURL=main.css.map */
